Fix button animation issue on Safari

--- a/style.css
+++ b/style.css
@@ -118,6 +118,9 @@ body {
   to {
     box-shadow:         0px 4px 0px white;
     transform: translateY(12px);
+
+    -webkit-box-shadow: 0px 4px 0px white;
+    -moz-box-shadow:    0px 4px 0px white;
   }
 }
 @keyframes push-button-end {
@@ -128,11 +131,10 @@ body {
 
     color: rgb(225, 245, 137);
     border: 1px solid rgb(225, 245, 137);
-    box-shadow:         0px 4px 0px rgb(225, 245, 137);
+    box-shadow:         0px 4px 0px rgb(212, 248, 51);
 
-    /* -webkit-box-shadow: 0px 4px 0px white;
-    -moz-box-shadow:    0px 4px 0px white; */
-    transform: translateY(12px);
+    -webkit-box-shadow: 0px 4px 0px rgb(225, 245, 137);
+    -moz-box-shadow:    0px 4px 0px rgb(225, 245, 137);
   }
 }
 
